--- a/notebooks/msva.ipynb
+++ b/notebooks/msva.ipynb
@@ -2,46 +2,272 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features_rn = []\n",
-    "features_iv3 = []\n",
-    "features_3D = []\n",
-    "features= []\n",
-    "features_rgb = []\n",
-    "features_flow= []\n",
-    "\n",
-    "for feature in [\"features_rn\", \"features_iv3\", \"features_3D\", \"features\", \"features_rgb\", \"features_flow\"]:\n",
-    "    for path in paths:\n",
-    "        training_set = VSMDataset(path, googlenet=True, resnext=True, inceptionv3=True,\n",
-    "                                 i3d_rgb=True, i3d_flow=True, resnet3d=True)\n",
-    "\n",
-    "        for i in range(len(training_set)):\n",
-    "            feat = training_set.get_feature(i, feature)\n",
-    "            \n",
-    "            for nframe in range(len(feat)):        \n",
-    "                if feature==\"features_rn\":\n",
-    "                    features_rn.append(feat[nframe])\n",
-    "                elif feature==\"features_iv3\":\n",
-    "                    features_iv3.append(feat[nframe])\n",
-    "                elif feature==\"features_3D\":\n",
-    "                    features_3D.append(feat[nframe])\n",
-    "                elif feature==\"features\":\n",
-    "                    features.append(feat[nframe])\n",
-    "                elif feature==\"features_rgb\":\n",
-    "                    features_rgb.append(feat[nframe])\n",
-    "                elif feature==\"features_flow\":\n",
-    "                    features_flow.append(feat[nframe])\n",
-    "                \n",
-    "features_rn = np.array(features_rn)    \n",
-    "features_iv3 = np.array(features_iv3)    \n",
-    "features_3D = np.array(features_3D)    \n",
-    "features = np.array(features)    \n",
-    "features_rgb = np.array(features_rgb)    \n",
-    "features_flow = np.array(features_flow)    "
+    "import os\n",
+    "import torch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"/home/shuaman/video_sm/video_summarization\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/shuaman/video_sm/video_summarization\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models import MSVA\n",
+    "from src.utils import VSMDataset, parse_configuration\n",
+    "from src.utils.utils_model import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msva = MSVA()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_weights_summe = \"/home/shuaman/video_sm/MSVA/model_weights/summe_random_non_overlap_0.5359.tar.pth\"\n",
+    "path_weights_tvsum = \"/home/shuaman/video_sm/MSVA/model_weights/tvsum_random_non_overlap_0.6271.tar.pth\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msva.load_state_dict(torch.load(path_weights_tvsum))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_paths = {\n",
+    "        'path_tvsum':\"/data/shuaman/video_summarization/datasets/processed_datasets/eccv16_dataset_tvsum_google_pool5.h5\",\n",
+    "        'path_summe':\"/data/shuaman/video_summarization/datasets/processed_datasets/eccv16_dataset_summe_google_pool5.h5\",\n",
+    "        'path_ovp':\"/data/shuaman/video_summarization/datasets/processed_datasets/eccv16_dataset_ovp_google_pool5.h5\",\n",
+    "        'path_youtube':\"/data/shuaman/video_summarization/datasets/processed_datasets/eccv16_dataset_youtube_google_pool5.h5\",\n",
+    "        'path_cosum':\"/data/shuaman/video_summarization/datasets/processed_datasets/dataset_cosum_processed.h5\",\n",
+    "#         'path_tvsum':\"/data/shuaman/video_summarization/datasets/processed_datasets/dataset_tvsum_processed.h5\",\n",
+    "#         'path_summe':\"/data/shuaman/video_summarization/datasets/processed_datasets/dataset_summe_processed.h5\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_use_feature = get_flags_features(\"googlenet\", \"i3d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'googlenet': True,\n",
+       " 'resnext': False,\n",
+       " 'inceptionv3': False,\n",
+       " 'i3d_rgb': True,\n",
+       " 'i3d_flow': True,\n",
+       " 'resnet3d': False}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_use_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "        'batch_size': 1,\n",
+    "        'num_workers': 4\n",
+    "        }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_split = \"/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/summe_splits.json\"\n",
+    "splits = parse_configuration(path_split)\n",
+    "split = splits[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['train_keys', 'test_keys'])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/data/shuaman/video_summarization/datasets/processed_datasets/eccv16_dataset_summe_google_pool5.h5'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_paths = get_paths('summe', 'canonical', **dict_paths)\n",
+    "dataset_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_generator, test_generator = get_dataloaders(dataset_paths, split, \n",
+    "                                                     dict_use_feature, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "it = 0\n",
+    "for i in training_generator:\n",
+    "    it += 1\n",
+    "    continue\n",
+    "print(it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "it = 0\n",
+    "for i in test_generator:\n",
+    "    it += 1\n",
+    "    continue\n",
+    "print(it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
