--- a/notebooks/pca_datasets.ipynb
+++ b/notebooks/pca_datasets.ipynb
@@ -23,7 +23,7 @@
     "        Datasets: TVSum, Summe, VSUMM, CoSum, Visiocity\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, hdfs_path, split=None, \n",
+    "    def __init__(self, hdfs_path, split=None, key_split=None,\n",
     "                 googlenet=False, \n",
     "                 resnext=False, \n",
     "                 inceptionv3=False,\n",
@@ -36,10 +36,14 @@
     "           hdfs_path (string): path of the hdfs processed data\n",
     "           split (dict): idxs of the train/test split \n",
     "        \"\"\"\n",
-    "        videos_info = h5py.File(hdfs_path)\n",
+    "        if not isinstance(hdfs_path, list):\n",
+    "            hdfs_paths = [hdfs_path]\n",
+    "        else:\n",
+    "            hdfs_paths = hdfs_path \n",
+    "        \n",
     "        self.labels = {}\n",
     "        self.data = {}\n",
-    "        \n",
+    "\n",
     "        keys_to_avoid = ['gtscore', 'gtsummary', 'user_summary']\n",
     "        \n",
     "        if not googlenet:\n",
@@ -53,20 +57,47 @@
     "        if not i3d_flow:\n",
     "            keys_to_avoid.append('features_flow')\n",
     "        if not resnet3d:\n",
-    "            keys_to_avoid.append('features_3D')\n",
+    "            keys_to_avoid.append('features_3D')        \n",
     "        \n",
-    "        for it, video in enumerate(list(videos_info)):\n",
-    "            self.labels[it] = dict((key, videos_info[video][key][...])for key in list(videos_info[video]) if key in ('gtscore', 'gtsummary', 'user_summary') )\n",
-    "            self.data[it] = dict((key, videos_info[video][key][...])for key in list(videos_info[video]) if key not in keys_to_avoid )   \n",
-    "            \n",
-    "            if \"video_name\" in self.data[it].keys():\n",
-    "                self.data[it][\"video_name\"] = str(self.data[it][\"video_name\"]) \n",
-    "            \n",
-    "        if split:\n",
-    "            #TO-DO\n",
-    "            pass\n",
-    "        \n",
+    "        iterator_videos = 0\n",
+    "        for path in hdfs_paths:\n",
+    "            print(\"path\", path)\n",
+    "            videos_info = h5py.File(path)  \n",
     "\n",
+    "            videos_to_iterate = list(videos_info)\n",
+    "            if split:\n",
+    "                if len(hdfs_paths)==1:\n",
+    "                    videos_to_iterate = [video for video in videos_to_iterate if video in split[key_split]]\n",
+    "                else:\n",
+    "                    if 'tvsum' in path:\n",
+    "                        name_dataset = 'tvsum'\n",
+    "                    elif 'summe' in path:\n",
+    "                        name_dataset = 'summe'\n",
+    "                    elif 'ovp' in path:\n",
+    "                        name_dataset = 'ovp'\n",
+    "                    elif 'youtube' in path:\n",
+    "                        name_dataset = 'youtube'\n",
+    "                    elif 'cosum' in path:\n",
+    "                        name_dataset = 'cosum'\n",
+    "                    elif 'mvs1k' in path:\n",
+    "                        name_dataset = 'mvs1k'\n",
+    "                    elif 'visiocity' in path:\n",
+    "                        name_dataset = 'visiocity'\n",
+    "                    else: \n",
+    "                        print(\"This dataset is not available, you have to get one of the allowed names\")\n",
+    "                        continue\n",
+    "                    key_videos = [video.split('/')[-1] for video in split[key_split] if name_dataset in video]\n",
+    "                    videos_to_iterate = [video for video in videos_to_iterate if video in key_videos]\n",
+    "                    \n",
+    "\n",
+    "            for it, video in enumerate(videos_to_iterate):\n",
+    "                self.labels[iterator_videos] = dict((key, videos_info[video][key][...])for key in list(videos_info[video]) if key in ('gtscore', 'gtsummary', 'user_summary') )\n",
+    "                self.data[iterator_videos] = dict((key, videos_info[video][key][...])for key in list(videos_info[video]) if key not in keys_to_avoid )   \n",
+    "\n",
+    "                if \"video_name\" in self.data[it].keys():\n",
+    "                    self.data[iterator_videos][\"video_name\"] = str(self.data[it][\"video_name\"]) \n",
+    "                iterator_videos = iterator_videos + 1\n",
+    "        \n",
     "    def __len__(self):\n",
     "        return len(self.data)\n",
     "\n",
@@ -95,11 +126,11 @@
    "outputs": [],
    "source": [
     "paths = [\n",
-    "        \"/home/shuaman/video_sm/video_summarization/src/dataset_ovp_processed.h5\",\n",
-    "        \"/home/shuaman/video_sm/video_summarization/src/dataset_summe_processed.h5\",\n",
-    "        \"/home/shuaman/video_sm/video_summarization/src/dataset_tvsum_processed.h5\",\n",
-    "        \"/home/shuaman/video_sm/video_summarization/src/dataset_youtube_processed.h5\",\n",
-    "        \"/home/shuaman/video_sm/video_summarization/src/dataset_cosum_processed.h5\",\n",
+    "        \"/data/shuaman/video_summarization/datasets/processed_datasets/dataset_ovp_processed.h5\",\n",
+    "        \"/data/shuaman/video_summarization/datasets/processed_datasets/dataset_summe_processed.h5\",\n",
+    "        \"/data/shuaman/video_summarization/datasets/processed_datasets/dataset_tvsum_processed.h5\",\n",
+    "        \"/data/shuaman/video_summarization/datasets/processed_datasets/dataset_youtube_processed.h5\",\n",
+    "        \"/data/shuaman/video_summarization/datasets/processed_datasets/dataset_cosum_processed.h5\",\n",
     "        ]"
    ]
   },
@@ -107,7 +138,50 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_rn\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_ovp_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_summe_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_tvsum_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_youtube_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_cosum_processed.h5\n",
+      "features_iv3\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_ovp_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_summe_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_tvsum_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_youtube_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_cosum_processed.h5\n",
+      "features_3D\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_ovp_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_summe_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_tvsum_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_youtube_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_cosum_processed.h5\n",
+      "features\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_ovp_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_summe_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_tvsum_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_youtube_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_cosum_processed.h5\n",
+      "features_rgb\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_ovp_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_summe_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_tvsum_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_youtube_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_cosum_processed.h5\n",
+      "features_flow\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_ovp_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_summe_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_tvsum_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_youtube_processed.h5\n",
+      "path /data/shuaman/video_summarization/datasets/processed_datasets/dataset_cosum_processed.h5\n"
+     ]
+    }
+   ],
    "source": [
     "features_rn = []\n",
     "features_iv3 = []\n",
@@ -117,6 +191,7 @@
     "features_flow= []\n",
     "\n",
     "for feature in [\"features_rn\", \"features_iv3\", \"features_3D\", \"features\", \"features_rgb\", \"features_flow\"]:\n",
+    "    print(feature)\n",
     "    for path in paths:\n",
     "        training_set = VSMDataset(path, googlenet=True, resnext=True, inceptionv3=True,\n",
     "                                 i3d_rgb=True, i3d_flow=True, resnet3d=True)\n",
@@ -154,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "(70676, 1024)"
+       "(69676, 1024)"
       ]
      },
      "execution_count": 5,
@@ -174,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "(54342, 1024)"
+       "(53872, 1024)"
       ]
      },
      "execution_count": 6,
@@ -194,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "(54137, 1024)"
+       "(53667, 1024)"
       ]
      },
      "execution_count": 7,
@@ -214,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "(70676, 2048)"
+       "(69676, 2048)"
       ]
      },
      "execution_count": 8,
@@ -234,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "(54342, 2048)"
+       "(53872, 2048)"
       ]
      },
      "execution_count": 9,
@@ -254,7 +329,7 @@
     {
      "data": {
       "text/plain": [
-       "(70676, 2048)"
+       "(69676, 2048)"
       ]
      },
      "execution_count": 10,
@@ -278,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,16 +388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(70676, 1024)"
+       "(69676, 1024)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,16 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(54342, 1024)"
+       "(53872, 1024)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,16 +428,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(70676, 1024)"
+       "(69676, 1024)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,17 +448,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.9938809 , -1.169457  , -4.483862  , ..., -0.12678224,\n",
-       "       -0.59480363, -0.22077972], dtype=float32)"
+       "array([ 1.9903108 , -1.6945962 , -4.3987203 , ...,  0.037727  ,\n",
+       "        0.30185947, -0.46105188], dtype=float32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,17 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.9938809 , -1.169457  , -4.483862  , ..., -0.12678224,\n",
-       "       -0.59480363, -0.22077972], dtype=float32)"
+       "array([ 1.9903108 , -1.6945962 , -4.3987203 , ...,  0.037727  ,\n",
+       "        0.30185947, -0.46105188], dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
